# docker-app-launcher

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Makefile  README-de.md  README.md  TESTPLAN.md  launcher.example.json  pyproject.toml
.claude/rules/: release-workflow.md
.github/workflows/: ci.yml  publish.yml
src/docker_app_launcher/: __init__.py  __main__.py  actions.py  config.py  gui.py  i18n.py  lockfile.py  logging_setup.py  subprocess_utils.py  tray.py  ui_model.py  update_check.py
src/docker_app_launcher/docs/: ARCHITECTURE.md
src/docker_app_launcher/frontends/: __init__.py  ctk.py  qt.py
src/docker_app_launcher/i18n/: __init__.py  de.yaml  el.yaml  en.yaml  es.yaml  fr.yaml  hi.yaml  id.yaml  ja.yaml  ko.yaml  pt.yaml  tr.yaml
src/docker_app_launcher/pyinstaller/: __init__.py  build_info.py  launcher.spec.template
src/python_poetry_template/: __init__.py  cli.py
test-configs/: adaptive-learner.json  bibliogon.json  minimal.json
tests/: conftest.py  test_actions.py  test_cli.py  test_config.py  test_example.py  test_frontends.py  test_gui_ctk.py  test_gui_helpers.py  test_gui_qt.py  test_gui_window.py  test_i18n.py  test_launch.py  test_lockfile.py  test_logging_setup.py  test_pyinstaller.py  test_subprocess_utils.py  test_tray.py  test_update_check.py
