[project]
name = "docker-app-launcher"
version = "0.13.0"
description = "Configurable desktop launcher for Docker-based applications"
authors = [{ name = "Asterios Raptis", email = "aster.raptis@gmail.com" }]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<4.0"
keywords = [
    "docker",
    "desktop",
    "launcher",
    "gui",
    "tkinter",
    "pyinstaller",
    "container",
    "self-hosted",
    "cross-platform",
    "app-launcher",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications",
    "Environment :: MacOS X",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Build Tools",
    "Topic :: System :: Installation/Setup",
    "Topic :: System :: Systems Administration",
    "Topic :: Desktop Environment",
    "Typing :: Typed",
]
dependencies = ["pyyaml>=6.0"]

[project.optional-dependencies]
# PyGObject powers pystray's AppIndicator backend (the reliable Linux tray);
# it is Linux-only and needs system libs, so it is gated by a platform marker
# to keep the extra installable on Windows/macOS (which use pystray's own
# native backends). When AppIndicator is still unavailable at runtime the
# launcher falls back to a taskbar-minimized window, so this never hard-fails.
tray = ["pystray>=0.19", "Pillow>=10.0", "PyGObject>=3.42,<3.52; sys_platform == 'linux'"]
# Modern-look CustomTkinter frontend; select with "gui_backend": "ctk".
ctk = ["customtkinter>=5.2"]

[project.urls]
Homepage = "https://github.com/astrapi69/docker-app-launcher"
Repository = "https://github.com/astrapi69/docker-app-launcher"
Documentation = "https://github.com/astrapi69/docker-app-launcher#readme"
Changelog = "https://github.com/astrapi69/docker-app-launcher/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/astrapi69/docker-app-launcher/issues"

[project.scripts]
docker-app-launcher = "docker_app_launcher.__main__:main"

[tool.poetry]
packages = [{ include = "docker_app_launcher", from = "src" }]

[tool.poetry.group.dev.dependencies]
ruff = "^0.15.0"
mypy = "^2.1.0"
pre-commit = "^4.6.0"
pytest = "^9.1.0"
pytest-cov = "^7.1.0"
pytest-mock = "^3.15.0"
codespell = "^2.4.0"
twine = "^6.2.0"
pyautogui = "^0.9.54"
customtkinter = "^6.0.0"

[build-system]
requires = ["poetry-core>=2.0"]
build-backend = "poetry.core.masonry.api"

# ---------------------------------------------------------------------------
# Tool Configuration
# ---------------------------------------------------------------------------

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "BLE", # flake8-blind-except
    "RUF", # ruff-specific rules
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["docker_app_launcher"]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
python_version = "3.10"
strict = true
warn_unused_configs = true
warn_return_any = true
ignore_missing_imports = true
files = ["src", "tests"]

# Tests stay readable: pytest fixtures are injected untyped, so don't require
# annotations on every test function/parameter. Bodies are still type-checked.
[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=docker_app_launcher --cov-report=term-missing --strict-markers"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["docker_app_launcher"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
skip_covered = false

[tool.codespell]
# The i18n/ YAML files are translated string catalogs (11 languages),
# README-de.md is the German README and docs/ARCHITECTURE.md is written in
# German; non-English words there are not typos. Each exclusion is listed
# twice (dir + dir/*) because the bare dir only prunes directory traversal
# (make codespell) while the glob is needed when pre-commit passes explicit
# file paths.
skip = "poetry.lock,.git,src/docker_app_launcher/i18n,src/docker_app_launcher/i18n/*,README-de.md,src/docker_app_launcher/docs,src/docker_app_launcher/docs/*"
ignore-words-list = "datas"
